--- a/style.css
+++ b/style.css
@@ -191,6 +191,11 @@ footer p {
   text-align: left;
 }
 
+.gallery-section h2{
+  text-align: center;
+  
+}
+
 form label {
   display: block;
   margin: 15px 0 5px 0;
